traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:16: error: type mismatch;
 found   : Unit
 required: Boolean
  if(getX() == getMondeLargeur() && getY()== getMondeHauteur()){
  ^