traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  var n = getMondeLargeur()
  var m = getMondeHauteur()
  var num = 0
  for(i <-0 to n){
    for(j <- 0 to m){
      if(posFinale(i,j)){
        setPos(i,j)
        num = num +1
        ecritMessage(num)
      }
    }
  }
}

def posFinale(x:Int,y:Int): Boolean ={
  if(getX() == getMondeLargeur() && getY()== getMondeHauteur()){
    return true
  }
}